compiler/tests/en/errors/pure_ref_param.salam
// EXPECT: E012
pure func bump(x &i32) i32:
    ret x + 1
end

func main:
    mut n i32 = 1
    println(bump(&(n)))
end
